# sql-review-env

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
client/: env_client.py
server/: __init__.py  app.py  environment.py  models.py  tasks.py
