[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sql-review-env"
version = "1.0.0"
description = "An OpenEnv environment where an AI agent fixes broken SQL queries"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Susheel", email = "thotasusheelkumar04@gmail.com"}
]
keywords = ["openenv", "reinforcement-learning", "sql", "agent", "environment"]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "openai",
  "httpx",
  "python-dotenv",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
